# MyOpenCV

./: settings.gradle
OpenCV320/: build.gradle
OpenCV320/src/androidTest/java/com/bethena/opencv320/: ExampleInstrumentedTest.kt
OpenCV320/src/main/cpp/: CMakeLists.txt  Contrast.cpp  Contrast.h  ContrastHelper.cpp  ContrastHelper.h  cvtool.cpp  native-lib.cpp
OpenCV320/src/main/java/com/bethena/opencv320/: NativeLib.kt
OpenCV320/src/test/java/com/bethena/opencv320/: ExampleUnitTest.kt
OpenCV410/: build.gradle
OpenCV410/src/main/cpp/: CMakeLists.txt  Contrast.cpp  Contrast.h  Native.cpp  bitmap_util.cpp  bitmap_util.h
OpenCV410/src/main/java/com/bethena/opencv410/: BitmapUtil.kt  NativeLib.kt
app/: build.gradle
app/src/androidTest/java/com/bethena/myopencv/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/bethena/myopencv/: ImageLoader.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/bethena/myopencv/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
